<resources>
    <string name="app_name">AppVolunt</string>
    <string name="valtxtemail">Email</string>
    <string name="valtxtpassword">Password</string>
    <string name="valbtnlogin">Login</string>
    <string name="valbtnlongin1">Iniciar Sesión</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_registro">Perfil</string>
    <string name="menu_proyectos">Proyecto de Voluntariado </string>
    <string name="menu_filtrado">Filtrado de Oportunidades</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_nombrecomp">Nombres y Apellidos</string>
    <string name="text_dni">DNI</string>
    <string name="text_email">Email</string>
    <string name="title_password">Contraseña</string>
    <string name="title_registro">Registro</string>
    <string name="text_crearcuenta">Crear Cuenta</string>
    <string name="title_registroOrganizacion">Registe su Organizacion</string>
    <string name="text_nombreOrganizacion">Nombre de Organizacion</string>
    <string name="text_Propetario">Propietario</string>
    <string name="text_direccion">Direccion</string>
    <string name="text_Ruc">Ruc</string>
    <string name="text_Celular">Celular</string>
    <string name="text_Correo">Correo</string>
    <string name="text_Contraseña">Contraseña</string>
    <string name="btn_registrarOrganizacion">Registrar</string>

    <string name="nombre_proyecto">Nombre del Proyecto</string>
    <string name="descripcion_proyecto">Descripción del Proyecto</string>
    <string name="habilidades_requeridas">Habilidades Requeridas</string>
    <string name="ubicacion">Ubicación</string>
    <string name="fecha_hora">Fecha y Hora</string>
    <string name="cantidad_voluntarios_requeridos">Cantidad de Voluntarios Requeridos</string>
    <string name="boton_publicar">Publicar</string>
    <string name="crear_proyecto_titulo">Crear Nuevo Proyecto de Voluntariado</string>
    <string name="title_PostularVoluntario">Postular a un proyecto de voluntariado</string>
    <string name="title_PostularProyectosVolunatario">Postular a un proyecto de voluntariado</string>
    <string name="text_nombreVoluntario">Nombre de Voluntario</string>
    <string name="text_edad">Edad</string>
    <string name="text_habilidades">Habilidades</string>
    <string name="text_disponibilidadHoraria">Disponibilidad Horaria</string>
    <string name="text_experencia_desc">Descripcion de Experencia</string>
    <string name="btn_Registrar">Registrar</string>

    <!-- Agrega aquí los estados del proyecto en el archivo de strings -->
    <string-array name="estados_proyecto">
        <item>En Planificación</item>
        <item>En Progreso</item>
        <item>Completado</item>
    </string-array>
</resources>