<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_Registro"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_registro" />
        <item
            android:id="@+id/nav_Proyectos"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_proyectos" />
        <item
            android:id="@+id/nav_Comunidad"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_filtrado" />
        <item
            android:id="@+id/nav_Estadisticas"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_filtrado" />

    </group>
</menu>